Bug 228899 - ATK bridge does not initialize for AIX (patch by Michael Lew) r=kyle.yuan@sun.com, sr=Henry.Jia@sun.com