accessible/src/atk/nsAppRootAccessible.cpp
@@ -148,8 +148,13 @@ struct _MaiUtilListenerInfo
 };
 
 static GnomeAccessibilityModule sAtkBridge = {
+#ifdef AIX
+    "libatk-bridge.a(libatk-bridge.so.0)", NULL,
+#else
     "libatk-bridge.so", NULL,
+#endif
     "gnome_accessibility_module_init", NULL,
+
     "gnome_accessibility_module_shutdown", NULL,
 };
 
